--- a/becas-app/.gitignore
+++ b/becas-app/.gitignore
@@ -1,4 +1,4 @@
-# compiled output
+# Compiled output
 /dist
 /node_modules
 /build
@@ -14,8 +14,9 @@ lerna-debug.log*
 
 # OS
 .DS_Store
+Thumbs.db
 
-# Tests
+# Test coverage
 /coverage
 /.nyc_output
 
@@ -28,23 +29,17 @@ lerna-debug.log*
 .settings/
 *.sublime-workspace
 
-# IDE - VSCode
+# VSCode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# dotenv environment variable files
+# Environment files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-
-# temp directory
-.temp
-.tmp
+.env.*
+!.env.example
 
 # Runtime data
 pids
@@ -52,5 +47,31 @@ pids
 *.seed
 *.pid.lock
 
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+# Diagnostic reports
+report.[0-9].[0-9].[0-9].[0-9].json
+
+# Temporary files
+.temp
+.tmp
+*.swp
+*.bak
+
+# Optional Nest CLI output (if using nest-cli.json)
+.nest-cli.json
+
+# Optional SQLite or other local DBs
+*.sqlite
+*.sqlite3
+*.db
+
+# Optional PM2 process files
+*.pm2
+
+# Logs or error dumps
+*.log
+*.tgz
+*.gz
+
+# Windows system files
+ehthumbs.db
+Icon?
